     - Add more node sizes
     - Add ex_stop_node and ex_start_node method
     - Update tests response fixtures
    (LIBCLOUD-416)
    [Markos Gogoulos]

  - Modify list_sizes method in the KT UCloud driver to work, even if the item
    doesn't have 'diskofferingid' attribute. (LIBCLOUD-435)
    [DaeMyung Kang]

  - Add new c3 instance types to the EC2 driver.
    [Tomaz Muraus]

 *) Storage

  - Add a new driver for KT UCloud based on the OpenStack Swift driver.
    (LIBCLOUD-431).
    [DaeMyung Kang]

  *) DNS

   - Update issue with inexistent zone / record handling in the get_zone and
     get_record method in the Linode driver. Those issues were related to
     changes in the Linode API. (LIBCLOUD-425)
     [Jon Chen]

Changes with Apache Libcloud 0.14.0-beta2

 *) Compute

   - Add log statements to our ParamikoSSHClient wrapper. This should make
     debugging deployment issues easier. (LIBCLOUD-414)
     [Tomaz Muraus]

   - Add new "NodeState.STOPPED" node state. Update HostVirual and EC2 driver to
     also recognize this new state. (LIBCLOUD-296)
     [Jayy Vis]

   - Add new Hong Kong endpoint to Rackspace driver.
     [Brian Curtin]

 *) Load Balancer

   - Add new Hong Kong endpoint to Rackspace driver.
     [Brian Curtin]

Changes with Apache Libcloud 0.14.0-beta1

 *) General

    - If the file exists, read pricing data from ~/.libcloud/pricing.json
      by default. If the file doesn't exist, fall back to the old behavior
      and use pricing data which is bundled with the release.
      [Tomaz Muraus]

    - Add libcloud.pricing.download_pricing_file function for downloading and
      updating the pricing file.
      [Tomaz Muraus]

 *) Compute

    - Refactor Rackspace driver classes and make them easier to use. Now there
      are two Rackspace provider constants - Provider.RACKSPACE which
      represents new next-gen OpenStack servers and
      Provider.RACKSPACE_FIRST_GEN which represents old first-gen cloud
      servers.
